# RAG

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/textfiles/: sample1.txt  sample2.txt
notebook/: agentic_rag.ipynb  document.ipynb  rag_evaluation.ipynb
